[gd_scene load_steps=11 format=2]

[ext_resource path="res://Ext/003_1280x720.png" type="Texture" id=1]
[ext_resource path="res://Screens/ScreenSelectChapter/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://Fonts/ChapterListingFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Screens/ScreenSelectChapter/MSelObj.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/TextFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://stepmania-compat/smSprite.gd" type="Script" id=6]
[ext_resource path="res://Ext/cubeThing.png" type="Texture" id=7]
[ext_resource path="res://Screens/BackButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://stepmania-compat/smScreenInOut.gd" type="Script" id=9]
[ext_resource path="res://Shaders/ChapterSelectFadeBottom.tres" type="Material" id=10]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 1006.33
margin_top = 75.5953
margin_right = 1345.33
margin_bottom = 548.595
custom_fonts/font = ExtResource( 3 )
text = "M
a
i
n"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_bottom = 1.0
margin_left = 10.0
margin_right = 484.0
margin_bottom = -6.0
mouse_filter = 1
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
material = ExtResource( 10 )
margin_right = 180.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
modulate = Color( 55.49, 56.97, 57.8, 1 )
use_parent_material = true
margin_right = 180.0
margin_bottom = 116.0
mouse_filter = 0
custom_fonts/font = ExtResource( 3 )
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1355.0
margin_top = 20.0
margin_right = -254.0
margin_bottom = -48.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer2"]
margin_right = 1101.0
margin_bottom = 1012.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="MSelObj" parent="ScrollContainer2/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1101.0
margin_bottom = 124.0

[node name="MSelObj2" parent="ScrollContainer2/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 134.0
margin_right = 1101.0
margin_bottom = 258.0

[node name="DescrptionF" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
rect_min_size = Vector2( 0, 48 )
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="DescrptionF"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="smSprite" type="TextureRect" parent="DescrptionF"]
margin_right = 120.0
margin_bottom = 125.0
rect_scale = Vector2( 1, 0.4 )
texture = ExtResource( 7 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescKB" type="RichTextLabel" parent="DescrptionF"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -560.0
margin_top = -50.0
margin_right = 561.0
margin_bottom = 23.0
size_flags_vertical = 4
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[font=Fonts/PS5Glyphs.tres][img=50x50]Fonts/Glyph/PC_PgUp.png[/img][img=50x50]Fonts/Glyph/PC_PgDn.png[/img][/font] Select Chapter       [font=Fonts/PS5Glyphs.tres][img=50x50]Fonts/Glyph/PC_Enter.png[/img][img=50x50]Fonts/Glyph/PC_Z.png[/img][/font] Confirm      [font=Fonts/PS5Glyphs.tres][img=50x50]Fonts/Glyph/PC_Esc.png[/img][/font] Return"
text = " Select Chapter        Confirm       Return"

[node name="DescGP" type="RichTextLabel" parent="DescrptionF"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -718.0
margin_top = -51.0
margin_right = 719.0
margin_bottom = 25.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[font=Fonts/PS5Glyphs.tres][img=50x50]Fonts/Glyph/PS5_L1.png[/img][img=50x50]Fonts/Glyph/PS5_R1.png[/img][/font] Select Chapter      [font=Fonts/PS5Glyphs.tres][img=50x50]Fonts/Glyph/PS5_Dpad.png[/img][/font] Select Part      [font=Fonts/PS5Glyphs.tres][img=50x50]Fonts/Glyph/PS5_Cross.png[/img][/font] Confirm      [font=Fonts/PS5Glyphs.tres][img=50x50]Fonts/Glyph/PS5_Circle.png[/img][/font] Return"
text = " Select Chapter       Select Part       Confirm       Return"

[node name="BackButton2" parent="." instance=ExtResource( 8 )]
margin_top = -146.0
margin_bottom = -97.0

[node name="FadeOut" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
color = Color( 0, 0, 0, 1 )
script = ExtResource( 9 )

[connection signal="gui_input" from="BackButton2" to="." method="_on_BackButton2_gui_input"]
